// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePassword /> should render 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    lg={6}
    md={8}
  >
    <Uncontrolled(Panel)
      bsStyle="default"
    >
      <PanelHeading
        bsClass="panel"
        componentClass="div"
      >
        Password
      </PanelHeading>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <form
          onSubmit={[Function]}
        >
          <InputError
            error=""
            label="Old Password"
            name="oldPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <InputError
            error=""
            label="New password"
            name="newPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <InputError
            error=""
            label="Confirm New Password"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <div
            style={
              Object {
                "marginTop": "20px",
              }
            }
          >
            <Row
              bsClass="row"
              componentClass="div"
            >
              <Col
                bsClass="col"
                className="text-muted"
                componentClass="div"
                md={6}
                xs={12}
              >
                Last changed 
                <RelativeTime
                  time="2018-02-14T12:00:00.000000Z"
                />
              </Col>
              <Col
                bsClass="col"
                componentClass="div"
                md={6}
                xs={12}
              >
                <SaveButton
                  altText="Change"
                  pullRight={true}
                />
              </Col>
            </Row>
          </div>
        </form>
      </PanelBody>
    </Uncontrolled(Panel)>
  </Col>
</Row>
`;

exports[`<ChangePassword /> should render placeholder when [props.ready=false] 1`] = `<LoadingPlaceholder />`;

exports[`<ChangePassword /> should render with error 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    lg={6}
    md={8}
  >
    <Uncontrolled(Panel)
      bsStyle="danger"
    >
      <PanelHeading
        bsClass="panel"
        componentClass="div"
      >
        Password
      </PanelHeading>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <form
          onSubmit={[Function]}
        >
          <InputError
            error="existing error"
            label="Old Password"
            name="oldPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <InputError
            error=""
            label="New password"
            name="newPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <InputError
            error=""
            label="Confirm New Password"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <div
            style={
              Object {
                "marginTop": "20px",
              }
            }
          >
            <Row
              bsClass="row"
              componentClass="div"
            >
              <Col
                bsClass="col"
                className="text-muted"
                componentClass="div"
                md={6}
                xs={12}
              >
                Last changed 
                <RelativeTime
                  time="2018-02-14T12:00:00.000000Z"
                />
              </Col>
              <Col
                bsClass="col"
                componentClass="div"
                md={6}
                xs={12}
              >
                <SaveButton
                  altText="Change"
                  pullRight={true}
                />
              </Col>
            </Row>
          </div>
        </form>
      </PanelBody>
    </Uncontrolled(Panel)>
  </Col>
</Row>
`;
